--- a/templates/buffer.html
+++ b/templates/buffer.html
@@ -9,7 +9,7 @@
 </head>
 <!doctype html>
     <title>Загрузка вагонов из буффера</title>
-    <div class="btn-group">
+    <div class="btn-group-relative">
       <a href="{{ url_for('main') }}" class="btn" style="margin-bottom: 1%;">Вернуться</a>
       <a id ="btnClick">Проверить список вагонов</a>
       <a id ="btnClear">Очистить</a>
