--- a/static/css/style.css
+++ b/static/css/style.css
@@ -178,6 +178,7 @@ body {
 
 .btn-group a {
   background-color: #419152; /* Green background */
+  border-radius: 1rem;
   color: white; /* White text */
   width: 30%;
   cursor: pointer; /* Pointer/hand icon */
@@ -190,7 +191,8 @@ body {
   line-height: 50px;
   position: relative;
   border: 1px solid white;
-  padding: 0 1rem;
+  padding: 1 1rem;
+  transition: background-color 0.25s;
 }
 
 .btn-group-relative a {
