добавил страницу для удаления записей

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,9 @@
       <a href="{{ url_for('from_buffer') }}" class="btn"
         >Добавление данных из буффера в таблицу Oracle</a
       ><br />
-      <a href="" class="btn">Удаление записей из таблицы Oracle</a>
+      <a href="{{ url_for('delete') }}" class="btn"
+        >Удаление записей из таблицы Oracle</a
+      >
     </div>
   </body>
 </html>
